Should fix AI crashes

--- a/Spellthrowers/Base.lproj/Main_iPad.storyboard
+++ b/Spellthrowers/Base.lproj/Main_iPad.storyboard
@@ -23,23 +23,6 @@
                                 <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iq6-9G-mVq">
-                                <rect key="frame" x="303" y="365" width="163" height="115"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="35"/>
-                                <state key="normal" title="Play!">
-                                    <color key="titleColor" red="0.052426310990000002" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <segue destination="r6j-5H-LJu" kind="modal" id="5PC-JW-bBR"/>
-                                </connections>
-                            </button>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Vs AI" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NYJ-sp-iAv">
-                                <rect key="frame" x="338" y="559" width="92" height="21"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
-                                <color key="textColor" red="0.96091627040000005" green="0.0" blue="0.05657065562" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="fireball.png" translatesAutoresizingMaskIntoConstraints="NO" id="ONs-u8-IgX">
                                 <rect key="frame" x="326" y="237" width="117" height="107"/>
                             </imageView>
@@ -54,26 +37,34 @@
                                     <segue destination="REr-PG-r7D" kind="modal" id="xtH-0g-WeU"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Je6-oK-MZy">
-                                <rect key="frame" x="308" y="579" width="153" height="83"/>
-                                <state key="normal" title="Change mode">
-                                    <color key="titleColor" red="0.1998242029" green="0.56461037199999997" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="KQJ-T1-9ml">
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="t9X-8N-lU2">
+                                <rect key="frame" x="278" y="475" width="213" height="73"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="40"/>
+                                <state key="normal" title="Play Vs AI!">
+                                    <color key="titleColor" red="0.052426310990000002" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <action selector="changeMode:" destination="0Kt-ui-3tc" eventType="touchUpInside" id="rkO-20-IRU"/>
+                                    <segue destination="r6j-5H-LJu" kind="modal" id="nlE-49-7RB"/>
                                 </connections>
                             </button>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="KQJ-T1-9ml">
-                                <rect key="frame" x="-11" y="-5" width="800" height="25"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3sa-6x-fgc">
+                                <rect key="frame" x="226" y="615" width="317" height="73"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="40"/>
+                                <state key="normal" title="Play Vs Human!">
+                                    <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="r6j-5H-LJu" kind="modal" id="6yw-Ig-Cnz"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
-                    <connections>
-                        <outlet property="versus" destination="NYJ-sp-iAv" id="bjt-6J-7E1"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KIk-eg-ETX" sceneMemberID="firstResponder"/>
             </objects>
@@ -925,9 +916,9 @@ Cg
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="4Hu-9s-myn"/>
-        <segue reference="335-cR-x5V"/>
+        <segue reference="xtH-0g-WeU"/>
         <segue reference="Cb9-uf-PYS"/>
+        <segue reference="nlE-49-7RB"/>
         <segue reference="qxs-qb-Ymr"/>
     </inferredMetricsTieBreakers>
 </document>
